Anonymous | Login | 2021-01-23 11:57 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030863 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-08-06 03:54 | 2019-08-20 14:31 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030863: Visualization, SelectMgr_ViewerSelector - disabling of View clipping planes is ignored for transformed objects | ||||||||
Description | SelectMgr_ViewerSelector::computeFrustum() discards object-specific settings. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|||||||
|
![]() |
|
(0086016) git (administrator) 2019-08-06 04:17 |
Branch CR30863 has been created by kgv. SHA-1: e443589e1d27a73e03fb29758f25c38efd3a3c6d Detailed log of new commits: Author: kgv Date: Tue Aug 6 04:14:05 2019 +0300 0030863: Visualization, SelectMgr_ViewerSelector - disabling of View clipping planes is ignored for transformed objects SelectMgr_ViewerSelector::computeFrustum() - fixed lost clipping planes when creating a new frustum. |
(0086017) kgv (developer) 2019-08-06 04:21 |
Patch is ready for review. |
(0086114) bugmaster (administrator) 2019-08-09 12:37 |
Combination - OCCT branch : CR30863 master SHA - e443589e1d27a73e03fb29758f25c38efd3a3c6d 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 53815c0544dd1e39d32ee14979d7d88e78729edc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16253.260000000133 / 16237.229999999976 [+0.10%] Products Total CPU difference: 10505.700000000048 / 10493.010000000033 [+0.12%] Windows-64-VC14: OCCT Total CPU difference: 17664.59375 / 17592.765625 [+0.41%] Products Total CPU difference: 12094.953125 / 12065.453125 [+0.24%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0086145) git (administrator) 2019-08-11 10:50 |
Branch CR30863 has been deleted by inv. SHA-1: e443589e1d27a73e03fb29758f25c38efd3a3c6d |
![]() |
|||
occt: master 208dc370
Timestamp: 2019-08-09 10:00:30 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0030863: Visualization, SelectMgr_ViewerSelector - disabling of View clipping planes is ignored for transformed objects SelectMgr_ViewerSelector::computeFrustum() - fixed lost clipping planes when creating a new frustum. |
||
mod - src/SelectMgr/SelectMgr_RectangularFrustum.hxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.cxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector.cxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-08-06 03:54 | kgv | New Issue | |
2019-08-06 03:54 | kgv | Assigned To | => kgv |
2019-08-06 04:17 | git | Note Added: 0086016 | |
2019-08-06 04:18 | kgv | Relationship added | child of 0030777 |
2019-08-06 04:21 | kgv | Note Added: 0086017 | |
2019-08-06 04:21 | kgv | Assigned To | kgv => san |
2019-08-06 04:21 | kgv | Status | new => resolved |
2019-08-09 11:21 | kgv | Assigned To | san => bugmaster |
2019-08-09 11:21 | kgv | Status | resolved => reviewed |
2019-08-09 12:18 | bugmaster | Test case number | => Not required |
2019-08-09 12:37 | bugmaster | Note Added: 0086114 | |
2019-08-09 12:37 | bugmaster | Status | reviewed => tested |
2019-08-11 10:40 | bugmaster | Changeset attached | => occt master 208dc370 |
2019-08-11 10:40 | bugmaster | Status | tested => verified |
2019-08-11 10:40 | bugmaster | Resolution | open => fixed |
2019-08-11 10:50 | git | Note Added: 0086145 | |
2019-08-20 14:31 | kgv | Relationship added | related to 0030906 |
Copyright © 2000 - 2021 MantisBT Team |