0030863: Visualization, SelectMgr_ViewerSelector - disabling of View clipping planes is ignored for transformed objects

SelectMgr_ViewerSelector::computeFrustum() - fixed lost clipping planes when creating a new frustum.